	each segment shares the last geometry of the previous segment.
	(three-shared-spline): A class that represents splines for which
	each segment shares the last three bits of geometry from the
	previous segment.
	(hermite-curve): A hermite curve class.
	(bezier-curve): A Bézier curve class.
	(unrbs-spline): a uniform, non-rational b-spline class.
	(catmull-rom-spline): A catmull-rom class.

	* vector.lisp (length): Allowed LENGTH to work on simple arrays.

	* conditions.lisp (spline-geometry-error): Added an error
	condition for spline geometry data.

2011-06-06  Rudy Neeser  <rudy.neeser@gmail.com>

	* spline.lisp (spline): Added a class for managing parametric
	curves.

	* basis.lisp: Added a file and some functions for producing
	standard basis matrices for various parametric curves and splines.

	* *.lisp: Updated copyright date.

2010-11-04  Rudy Neeser  <rudy.neeser@gmail.com>

	* vector.lisp (vector=): Changing the user of lm:- to cl:- speeds
	up code.

2010-11-02  Rudy Neeser  <rudy.neeser@gmail.com>

	* operations.lisp (c+): Added a method so that scalar values can
	be added to a matrix (it is added to each element).
	(c-): Added a method so that scalar values can be subtracted from
	a matrix, and a method to allow a matrix to be "subtracted" from a
	scalar value.
	(c*): Added a method to allow a matrix to be multiplied by a
	scalar value.
	(c/): Added a method to allow a matrix to be divided by a scalar,
	and vice versa.

	* tests.lisp (test-dimensions): Added the missing
	&allow-other-keys argument.

	* operations.lisp (c*): Ensure that dimensions are tested properly
	when using non-square matrices.

2010-10-29  Rudy Neeser  <rudy.neeser@gmail.com>

	* matrix.lisp (make-matrix): Ensure that the initial-elements are
	converted to double-floats as needed.

2010-10-20  Rudy Neeser  <rudy.neeser@gmail.com>

	* random.lisp (make-random-vector): Ensure that the type placed
	into the created vector is a double-float.
